removed obsolete pade-number elements in scripts.js and fixed author line-spacing

--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ body {
     text-align: center;
     font-size: 20px;
     font-weight: 600;
+    white-space: nowrap;
 }
 
 form {
@@ -75,6 +76,10 @@ input#title , input#author , input#pages {
     font-weight: 500;
 }
 
+input#pages {
+    padding-right: 5px;
+}
+
 .read-form {
     display: flex;
     gap: 15px;
@@ -83,6 +88,7 @@ input#title , input#author , input#pages {
 
 .read-form>label {
     font-weight: 500;
+    white-space: nowrap;
 }
 
 .read-form>input {
@@ -184,6 +190,7 @@ input#title , input#author , input#pages {
     font-weight: 500;
     text-align: center;
     margin-bottom: 10px;
+    line-height: 24px;
 
     /* necessary to show letters below the line */
     padding-bottom: 2px;
